2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-picker-button-multicolumn-example.c
	(create_touch_selector): Fix compilation warning.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c (hildon_pannable_area_button_press_cb)
	(hildon_pannable_area_button_release_cb)
	(hildon_pannable_get_child_widget_at): Fix compilation warnings.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_add_image_size_group): Fix
	assertion.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-bread-crumb-trail.h
	* src/hildon-date-editor.c
	* src/hildon-date-selector.c
	* src/hildon-pannable-area.c
	* src/hildon-picker-dialog.c
	* src/hildon-time-selector.c
	* src/hildon-touch-selector-entry.c
	* src/hildon-touch-selector.c
	* src/hildon-touch-selector.h: Misc documentation fixes

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-date-editor-example.c (main): Updated date
	editor example.

	* examples/hildon-note-example.c (on_confirmation_clicked):
	Updated confirmation note example.

	* src/hildon-date-editor.c
	* src/hildon-note.c: Updated sample programs in documentation.
	Fixes: NB#87437

2008-08-08  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-button.h:
	* src/hildon-picker-button.h:
	* src/hildon-time-button.c:
	* src/hildon-time-button.h:

	Some declarations changes to allow gtk-doc to document the widgets
	properly.

2008-08-08  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-button.c: Document the widget.
	* src/hildon-time-button.c: Document the widget.

2008-08-08  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: Document the widget.
	* src/hildon-touch-selector-entry.c: Document the widget.

2008-08-08  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* src/Makefile.am
	* src/hildon.h
	* src/hildon-check-button.h
	* src/hildon-check-button.c: New functions to create the Hildon