@@ -64,7 +64,7 @@
     <title>Miscellaneous controls</title>
     <xi:include href="xml/hildon-find-toolbar.xml"/>
     <xi:include href="xml/hildon-caption.xml"/>
-    <xi:include href="xml/hildon-bread-crumb-trial.xml"/>
+    <xi:include href="xml/hildon-bread-crumb-trail.xml"/>
   </chapter>
 
   <chapter>
