@@ -66,6 +66,6 @@
           <inlinegraphic fileref="weekday-picker.png" format="PNG"></inlinegraphic>
   </link> 
   <link linkend="HildonBreadCrumbTrial">
-          <inlinegraphic fileref="bread-crumb-trial.png" format="PNG"></inlinegraphic>
+          <inlinegraphic fileref="bread-crumb-trail.png" format="PNG"></inlinegraphic>
   </link> 
 </para>
